--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "build-schema-types": "node ./scripts/generate-types.mjs"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "basic-auth": "^2.0.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.18.3",
     "express-openapi": "^12.1.3",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/basic-auth": "^1.1.8",
