--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.3",
     "express-openapi": "^12.1.3",
     "mongoose": "^8.2.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pnpm": "^9.7.0"
   },
   "devDependencies": {
     "@types/basic-auth": "^1.1.8",
